# leveldb_api

./: .gitignore  .gitmodules  ArrayRef.h  CMakeLists.txt  DB.hpp  Database.cpp  Database.h  Database.hpp  Logger.h  README.md  Server.cpp  Server.h  client.cpp  leveldb_daemon.cpp  main.cpp
DB/: Database.cpp  Database.h
Logging/: Logger.h
Server/: Server.cpp  Server.h
SharedMemory/: SharedMemoryObject.cpp  SharedMemoryObject.h
System/: Errors.h  FileOperations.h  Permissions.h
include/: DB.hpp
ipc/: Client.cpp  Client.h  Server.cpp  Server.h
serializer/: Serializer.hpp
storage/: Database.cpp  Database.h
